@@ -30,6 +30,7 @@ Version 0.3.7 - ??
 - [improved] Add "width" property to WFYAHOO_widget_Calendar. Improve layout. So it works more cleanly when laid out inline with other elements.
 - [new] Add WFYAHOO_widget_DateTimePicker widget.
 - [new] Add WFForm.disableEnterKeySubmit property to optionally (default false) prevent enter-key-submit of forms.
+- [new] Add addToEmail() to Mail_Mailer to allow multiple "to" recipients.
 
 
 Version 0.3.6 - 3/18/2010
